Fixed squished bullets

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -260,7 +260,8 @@ h3 {
 
 .card2 img {
   height: 18px;
-  width: auto;
+  width: 18px;
+  min-width:18px;
 }
 
 .card .cardInfo {
